# ElenixOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md
scripts/sni/: gen_lvgl_desc.py
scripts/sni/config/: api_table.json
src/: elenix_os.h  eos_version.h
src/apps/flash_light/: eos_flash_light.c  eos_flash_light.h
src/apps/settings/: eos_settings.c  eos_settings.h
src/apps/test/: eos_test.c  eos_test.h
src/config/: eos_config.h  eos_config_internal.h
src/devices/: eos_device.h
src/devices/battery/: eos_dev_battery.c  eos_dev_battery.h
src/devices/display/: eos_dev_display.c  eos_dev_display.h
src/devices/power/: eos_dev_power.c  eos_dev_power.h
src/devices/sensor/: eos_dev_sensor.c  eos_dev_sensor.h
src/devices/time/: eos_dev_time.c  eos_dev_time.h
src/devices/vibrator/: eos_dev_vibrator.c  eos_dev_vibrator.h
src/framework/activity/: eos_activity.c  eos_activity.h
src/framework/app/: eos_app.c  eos_app.h  eos_app_list.c  eos_app_list.h
src/framework/chrome/: eos_chrome_manager.c  eos_chrome_manager.h
src/framework/i18n/: eos_lang.c  eos_lang.h
src/framework/package/: eos_pkg_mgr.c  eos_pkg_mgr.h
src/framework/watchface/: eos_watchface.c  eos_watchface.h  eos_watchface_builtin.c  eos_watchface_builtin.h  eos_watchface_js.c  eos_watchface_js.h  eos_watchface_list.c  eos_watchface_list.h
src/input/: eos_input.h
src/input/crown/: eos_crown.c  eos_crown.h
src/input/side_button/: eos_side_button.c  eos_side_button.h
src/input/touch/: eos_touch.c  eos_touch.h
src/kernel/core/: eos_core.c  eos_core.h  eos_error.h
src/kernel/event/: eos_event.c  eos_event.h
src/kernel/memory/: eos_mem.c  eos_mem.h
src/kernel/scheduler/: eos_dispatcher.c  eos_dispatcher.h
src/lib/ds/: eos_cqueue.c  eos_cqueue.h  eos_darray.c  eos_darray.h  eos_dlist.c  eos_dlist.h  eos_fifo.c  eos_fifo.h  eos_stack.c  eos_stack.h
src/lib/sha256/: eos_sha256.c  eos_sha256.h
src/lib/utils/: eos_utils.h  eos_virtual_display.c  eos_virtual_display.h
src/port/: eos_port.c  eos_port.h
src/port/critical/: eos_port_critical.h  eos_port_critical_bare_metal.c  eos_port_critical_custom.c  eos_port_critical_freertos.c  eos_port_critical_posix.c  eos_port_critical_rtthread.c
src/port/file_system/: eos_fs_port.h  eos_fs_port_posix.c  eos_fs_port_rtthread.c
src/port/memory/: eos_mem_auto.c  eos_mem_port.h
src/script_engine/core/: script_engine_core.c  script_engine_core.h  script_engine_manager.c  script_engine_manager.h
src/script_engine/sni/: sni.c  sni.h  sni_callback_runtime.c  sni_callback_runtime.h  sni_context.c  sni_context.h  sni_type_bridge.c  sni_type_bridge.h  sni_types.h
src/script_engine/spm/: spm.c  spm.h
(+113 files in other folders)
